renamed to parking monitor

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Parking Indicator</title>
-    <meta name="description" content="Parking Indicator" />
+    <title>Parking Monitor</title>
+    <meta name="description" content="Parking Monitor" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="materialize.min.css"></link>
     <link rel="stylesheet" href="style.css"></link>
@@ -12,7 +12,7 @@
     <header id="header">
       <div class="row">
         <div class="page-header">
-          Parking Indicator
+          Parking Monitor
         </div>
       </div>
     </header>
