--- a/home.html
+++ b/home.html
@@ -45,6 +45,8 @@
       </div>
     </main>
     <script src="jquery-2.1.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js.cookie.js"></script>
     <script src="main1.js"> </script>
   </body>
 </html>
